--- a/vue02/package.json
+++ b/vue02/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.13.0",
+    "jquery": "^3.4.1",
+    "path-to-regexp": "^6.1.0",
     "view-design": "^4.1.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
